--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>KAKA TETE</title>
-	<link rel="stylesheet" type="text/css" href="static/css/index.css">
-</head>
-<body>
-	Kaka Tete - Online Game Hub
-</body>
+  <head>
+    <title>KAKA TETE</title>
+    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
+  </head>
+  <body>
+    Kaka Tete - Online Game Hub MAJJA AGYE
+    VROOOOOOOOOOOOOOOOOOOOOOOOOO!!!!!!!!!!!!
+  </body>
 </html>
