--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="static/css/index.css">
 </head>
 <body>
-	Kaka Tete - Online Game Hub
+	Kaka Tete - Online Game Hub - home page
+	<br>
+	update 1
 </body>
 </html>
