--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
-<head>
-	<title>KAKA TETE</title>
-	<link rel="stylesheet" type="text/css" href="static/css/index.css">
-</head>
-<body>
-	Kaka Tete - Online Game Hub - home page
-	<br>
-	update 1
-</body>
+  <head>
+    <title>KAKA TETE</title>
+    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
+  </head>
+  <body>
+    Kaka Tete - Online Game Hub - home page
+    <br />
+    update 1
+    <br />
+    update 2
+  </body>
 </html>
