--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -73,6 +73,20 @@
     <ion-icon name="menu-outline" class="open"></ion-icon>
     <ion-icon name="close-outline" class="close"></ion-icon>
 </div>
+<div class="box">
+  <span class="gamebox">game</span>
+</div>
+<div class="chat">
+  <span class="chatting">msg here</span>
+</div>
+<div class="chatbox">
+  <label for="msg">Yaha Likho</label>
+  <input type="text" name="msg" id="name">
+</div>
+<div class="send">
+  <ion-icon name="send-outline"></ion-icon>
+
+</div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="static/js/index.js"></script>
