--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -31,7 +31,7 @@
           <b></b>
           <a href="#" >
             <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
-            <span class="title">Team Taboo</span>  
+            <span class="title">Ludo</span>  
           </a>
       </li>
       <li class="list">
