--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
+  <div class="heading">
+    <span class="main">
+      KAKA-TETE ONLINE GAME HUB
+        <br>
+      </span>
+    </div>
+    <div class="subheading">
+      <span class="sub">
+        - khelo,majje uthao,aur niklo
+    </span>
+  </div>
 <div class="navigation">
     <ul>
       <li class="list active">
