--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -58,7 +58,7 @@
           <b></b>
           <a href="#" >
             <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-            <span class="title">Settings</span>  
+            <span class="title">Pehchan btao(Login)</span>  
           </a>
       </li>
       <li class="list">
@@ -66,7 +66,15 @@
           <b></b>
           <a href="#" >
             <span class="icon"><ion-icon name="help-outline"></ion-icon></span>
-            <span class="title">Help</span>  
+            <span class="title">Aur janega?(About)</span>  
+          </a>
+      </li>
+      <li class="list">
+          <b></b>
+          <b></b>
+          <a href="#" >
+            <span class="icon"><ion-icon name="share-social-outline"></ion-icon></span>
+            <span class="title">Failade Failade(Share)</span>  
           </a>
       </li>
       <li class="list">
@@ -74,16 +82,16 @@
           <b></b>
           <a href="#" >
             <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
-            <span class="title">Exit</span>  
+            <span class="title">Prasthan Kariye(Exit)</span>  
           </a>
       </li>
     </ul>
 </div>
 
-<div class="toggle">
+<!-- <div class="toggle">
     <ion-icon name="menu-outline" class="open"></ion-icon>
     <ion-icon name="close-outline" class="close"></ion-icon>
-</div>
+</div> -->
 <div class="box">
   <span class="gamebox">game</span>
 </div>
@@ -97,6 +105,9 @@
 <div class="send">
   <ion-icon name="send-outline"></ion-icon>
 
+</div>
+<div class="login">
+  <ion-icon name="person-outline"></ion-icon>
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
