--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -64,7 +64,7 @@
       <li class="list">
           <b></b>
           <b></b>
-          <a href="#" >
+          <a href="/about" >
             <span class="icon"><ion-icon name="help-outline"></ion-icon></span>
             <span class="title">Aur janega?(About)</span>  
           </a>
