--- a/frontend/frontend/about.html
+++ b/frontend/frontend/about.html
@@ -6,69 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About | Kaka Tete</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<style type="text/css">
-		* {
-			margin: 0;
-			padding: 0;
-		}
-
-		a{
-			color: black;
-			text-decoration: none;
-			border-bottom: 1px solid black;
-		}
-		a:focus{
-			color: black;
-			border: 0;
-		}
-		a:hover{
-			color: grey;
-			border: 0;
-		}
-
-		ul{
-			list-style: none;
-		}
-		ul li{
-			margin-left: 20px;
-		}
-
-		.material-icons{
-		}
-
-		#top{
-			background: purple;
-			color: white;
-			font-size: 30px;
-			font-family: verdana;
-			height: 80px;
-			line-height: 80px;
-			width: 100%;
-			justify-content: center;
-			text-align: center;
-		}
-
-		#body{
-			background: lightblue;
-			color: brown;
-			border-radius: 5px;
-			width: 50%;
-			margin: 0 calc(25% - 20px);
-			padding: 20px;
-			margin-top: 50px;
-			font-family: sans-serif;
-			font-size: 20px;
-		}
-
-		@media screen and (max-width: 800px){
-			#body{
-				width: 90%;
-				margin: 0 calc(5% - 10px);
-				padding: 10px;
-				margin-top: 50px;
-			}
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="/static/css/about.css">
 </head>
 <body>
 	
