--- a/frontend/frontend/mainpage.html
+++ b/frontend/frontend/mainpage.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
-    <div class="chess">
+    <div class="chess game">
         <a href="https://kakatete.herokuapp.com/" target="_blank"></a>
         <input type="image" src="static/images/chess.jpeg" alt="Error loading image">
     </div>
-    <div class="ludo">
+    <div class="ludo game">
         <a href="https://kakatete.herokuapp.com/" target="_blank"></a> 
         <input type="image" src="static/images/ludo.jpeg" alt="Error loading image"> 
     </div>
-    <div class="scribble">
+    <div class="scribble game">
         <a href="https://kakatete.herokuapp.com/" target="_blank"></a>
         <input type="image" src="static/images/scribble.jpeg" alt="Error loading image">
     </div>
