--- a/frontend/frontend/mainpage.html
+++ b/frontend/frontend/mainpage.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
-    <div class="chess">
-        <a href="https://kakatete.herokuapp.com/" target="_blank"></a>
-        <input type="image" src="static/images/chess.jpeg" alt="Error loading image">
-    </div>
+    <div class="container">
+        <div class="chess">
+            <a href="/play?game=Chess" target="_blank">
+                <img src="static/images/chess.jpeg" alt="Error loading image">
+            </a>
+        </div>
     <div class="ludo">
-        <a href="https://kakatete.herokuapp.com/" target="_blank"></a> 
-        <input type="image" src="static/images/ludo.jpeg" alt="Error loading image"> 
+        <a href="/play?game=Ludo" target="_blank">
+            <img src="static/images/ludo.jpeg" alt="Error loading image"> 
+        </a> 
     </div>
     <div class="scribble">
-        <a href="https://kakatete.herokuapp.com/" target="_blank"></a>
-        <input type="image" src="static/images/scribble.jpeg" alt="Error loading image">
+        <a href="/play?game=Scribble" target="_blank">
+            <img src="static/images/scribble.jpeg" alt="Error loading image">
+        </a>
     </div>
+</div>
     <div class="heading">
         <span class="main">
             KAKA-TETE ONLINE GAME HUB
@@ -27,8 +32,8 @@
     </div>
     <div class="subheading">
         <span class="sub">
-          - khelo, majje uthao, aur niklo
-      </span>
+            - khelo, majje uthao, aur niklo
+        </span>
     </div>
 </body>
 </html>
