--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KakaTete</title>
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
   <div class="heading">
@@ -93,14 +93,14 @@
     <ion-icon name="close-outline" class="close"></ion-icon>
 </div> -->
 <div class="box">
-  <span class="gamebox">game</span>
+  <span class="gamebox">{{ game.Game_Title }}</span>
 </div>
 <div class="chat">
   <span class="chatting">msg here</span>
 </div>
 <div class="chatbox">
   <label for="msg">Yaha Likho</label>
-  <input type="text" name="msg" id="name">
+  <input type="text" name="msg" id="name" placeholder="Yaha Likho Sirjee">
 </div>
 <div class="send">
   <ion-icon name="send-outline"></ion-icon>
