--- a/frontend/frontend/mainpage.html
+++ b/frontend/frontend/mainpage.html
@@ -10,17 +10,17 @@
 <body>
     <div class="container">
         <div class="chess">
-            <a href="/play?game=Chess" target="_blank">
+            <a href="/play?game=Chess">
                 <img src="static/images/chess.jpeg" alt="Error loading image">
             </a>
         </div>
     <div class="ludo">
-        <a href="/play?game=Ludo" target="_blank">
+        <a href="/play?game=Ludo">
             <img src="static/images/ludo.jpeg" alt="Error loading image"> 
         </a> 
     </div>
     <div class="scribble">
-        <a href="/play?game=Scribble" target="_blank">
+        <a href="/play?game=Scribble">
             <img src="static/images/scribble.jpeg" alt="Error loading image">
         </a>
    
