--- a/frontend/frontend/mainpage.html
+++ b/frontend/frontend/mainpage.html
@@ -7,25 +7,7 @@
     <title>Kaka Tete</title>
     <link rel="stylesheet" href="static/css/index.css">
 </head>
-<body>
-    <div class="container">
-        <div class="chess">
-            <a href="/play?game=Chess">
-                <img src="static/images/chess.jpeg" alt="Error loading image">
-            </a>
-        </div>
-    <div class="ludo">
-        <a href="/play?game=Ludo">
-            <img src="static/images/ludo.jpeg" alt="Error loading image"> 
-        </a> 
-    </div>
-    <div class="scribble">
-        <a href="/play?game=Scribble">
-            <img src="static/images/scribble.jpeg" alt="Error loading image">
-        </a>
-   
-    </div>
-</div>
+<body style="background: rgb(5,5,20); color: rgb(220,200,200); font-family: 'comic sans ms';">
     <div class="heading">
         <span class="main">
             KAKA-TETE ONLINE GAME HUB
@@ -35,6 +17,30 @@
         <span class="sub">
             - khelo, majje uthao, aur niklo
         </span>
+    </div>
+    <br><br>
+    <center>
+        <h2 style="font-family: verdana;">
+            Select your game
+        </h2>
+    </center>
+    <div class="container">
+        <div class="chess">
+            <a href="/play?game=Chess">
+                <img src="static/images/chess.jpeg" alt="Error loading image">
+            </a>
+        </div>
+        <div class="ludo">
+            <a href="/play?game=Ludo">
+                <img src="static/images/ludo.jpeg" alt="Error loading image"> 
+            </a> 
+        </div>
+        <div class="scribble">
+            <a href="/play?game=Scribble">
+                <img src="static/images/scribble.jpeg" alt="Error loading image">
+            </a>
+       
+        </div>
     </div>
 </body>
 </html>
