--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -24,7 +24,7 @@
       <li class="list active">
           <b></b>
           <b></b>
-          <a href="#" >
+          <a href="/" >
             <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
             <span class="title">Home</span>  
           </a>
