--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -111,6 +111,6 @@
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="static/js/index.js"></script>
+<script src="/static/js/index.js"></script>
 </body>
 </html>
