--- a/frontend/frontend/mainpage.html
+++ b/frontend/frontend/mainpage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaka Tete</title>
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body style="background: rgb(5,5,20); color: rgb(220,200,200); font-family: 'comic sans ms';">
     <div class="heading">
@@ -27,17 +27,17 @@
     <div class="container">
         <div class="chess">
             <a href="/play?game=Chess">
-                <img src="static/images/chess.jpeg" alt="Error loading image">
+                <img src="/static/images/chess.jpeg" alt="Error loading image">
             </a>
         </div>
         <div class="ludo">
             <a href="/play?game=Ludo">
-                <img src="static/images/ludo.jpeg" alt="Error loading image"> 
+                <img src="/static/images/ludo.jpeg" alt="Error loading image"> 
             </a> 
         </div>
         <div class="scribble">
             <a href="/play?game=Scribble">
-                <img src="static/images/scribble.jpeg" alt="Error loading image">
+                <img src="/static/images/scribble.jpeg" alt="Error loading image">
             </a>
        
         </div>
