--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="heading">
     <span class="main">
-      KAKA-TETE ONLINE GAME HUB
+      KAKA-TETE ONLINE GAMING HUB
         <br>
       </span>
     </div>
