--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KakaTete</title>
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
   <div class="heading">
@@ -46,6 +46,7 @@
                   <a href="#">Chess</a>
                   <a href="#">Ludo</a>
                   <a href="#">Scribble</a>
+                  <a href="#">Tic-Tac-Toe</a>
                 </div>
               </div>
           </span>
@@ -96,7 +97,7 @@
           <b></b>
           <a href="#" >
             <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
-            <span class="title">Prasthan Kariye(Exit)</span>  
+            <span class="title">Leave Server</span>  
           </a>
       </li>
     </ul>
@@ -127,6 +128,6 @@
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="/static/js/index.js"></script>
+<script src="static/js/index.js"></script>
 </body>
 </html>
