--- a/frontend/frontend/static/tictactoe.html
+++ b/frontend/frontend/static/tictactoe.html
@@ -31,6 +31,6 @@
        <button id="reset">Reset</button>
      </section>
     </main>
-    <script src="./js/index.js"></script>
-</body>
+    <script src="../static/js/ttt.js"></script>
+  </body>
 </html>
