--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KakaTete</title>
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
   <div class="heading">
@@ -105,7 +105,7 @@
     <ion-icon name="close-outline" class="close"></ion-icon>
 </div> -->
 <div class="box">
-  <span class="gamebox" id="gamebox"></span>
+  <span class="gamebox" id="gamebox">{{game.Game_Title}}</span>
 </div>
 <div class="chat">
   <span class="chatting">msg here</span>
@@ -125,6 +125,6 @@
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="static/js/index.js"></script>
+<script src="/static/js/index.js"></script>
 </body>
 </html>
