--- a/frontend/frontend/tictactoe.html
+++ b/frontend/frontend/tictactoe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="./css/ttt.css">
+    <link rel="stylesheet" href="/static/css/games/ttt.css">
 </head>
 <body>
   <main class="display">
@@ -31,6 +31,6 @@
        <button id="reset">Reset</button>
      </section>
     </main>
-    <script src="../static/js/ttt.js"></script>
+    <script src="/static/js/games/ttt.js"></script>
   </body>
 </html>
