--- a/frontend/frontend/ludo.html
+++ b/frontend/frontend/ludo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ludo</title>
-    <link rel="stylesheet" href="./static/css/games/ludo.css">
+    <link rel="stylesheet" href="/static/css/games/ludo.css">
 </head>
 <body>
         <div class="mainframe">
@@ -122,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <script src="./static/js/games/ludo.js"></script>
+        <script src="/static/js/games/ludo.js"></script>
     </body>
 </body>
 </html>
