--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -105,7 +105,11 @@
     <ion-icon name="close-outline" class="close"></ion-icon>
 </div> -->
 <div class="box">
-  <span class="gamebox" id="gamebox">{{game.Game_Title}}</span>
+  <span class="gamebox {{game}}" id="gamebox" style="color: white;">
+    <noscript>
+      Seems like you have turned off your javascript, Please Turn it ON to play games.
+    </noscript>
+  </span>
 </div>
 <div class="chat">
   <span class="chatting">msg here</span>
@@ -126,5 +130,17 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="/static/js/index.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript">
+
+function SetUpGameBoard(){
+  var gamebox = $("#gamebox");
+  game = document.getElementById("gamebox").classList[1];
+  gamebox.load("/play/"+game);
+}
+
+SetUpGameBoard();
+
+</script>
 </body>
 </html>
