--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KakaTete</title>
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/kakatete/frontend/frontend/static/css/index.css">
 </head>
 <body>
   <div class="heading">
