--- a/frontend/frontend/about.html
+++ b/frontend/frontend/about.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About | Kaka Tete</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="/kakatete/frontend/frontend/static/css/about.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/about.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo.jpg"/>
 </head>
 <body>
 	
@@ -17,8 +18,8 @@
 	<br><br>
 
 	<center>
-		<a href="/">
-		<span class="fa fa-arrow-left">Back to home</span>
+		<a href="/play">
+		<span class="fa fa-arrow-left">Back to Play Dashboard</span>
 		</a>
 	</center>
 
