--- a/frontend/frontend/play.html
+++ b/frontend/frontend/play.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_Page</title>
-    <link rel="stylesheet" href="Untitled-1.css">
+    <link rel="stylesheet" href="/static/css/testing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo.jpg"/>
 <body>
     <div class="navbar">
-        <h2 class="name"> <i class="fas fa-dice-d20"></i>KaKatete</h2>
+        <h2 class="name"><a href="/" style="color: inherit; text-decoration: none;"><i class="fas fa-dice-d20"></i>KaKatete</a></h2>
         <ul> 
           
             <li class="option"><i class="fas fa-home"></i><a href="#"> Home</a></li>
@@ -26,16 +27,16 @@
             <li><i class="fas fa-gamepad"></i><a href="#"> Games</a>
                 <div class="games">
                     <ul>
-                        <li><i class="fas fa-chess"></i><a href="#"> Chess</a></li>
-                        <li><i class="fas fa-signature"></i><a href="#"> Skrible</a></li>
-                        <li><i class="fas fa-dice"></i><a href="#"> Ludo</a></li>
-                        <li><i class="fas fa-users"></i><a href="#"> Tic Tac Toe</a></li>
+                        <li><i class="fas fa-chess"></i><a href="/Chess"> Chess</a></li>
+                        <li><i class="fas fa-signature"></i><a href="/Scribble"> Scrible</a></li>
+                        <li><i class="fas fa-dice"></i><a href="/Ludo"> Ludo</a></li>
+                        <li><i class="fas fa-users"></i><a href="/Tic Tac Toe"> Tic Tac Toe</a></li>
                     </ul>
                 </div>
             </li>
             <li><i class="fas fa-share-alt"></i><a href="#"> Share</a></li>
             <li><i class="fas fa-cog"></i><a href="#"> Settigs</a></li>
-            <li><i class="fas fa-book"></i><a href="#"> About</a></li>
+            <li><i class="fas fa-book"></i><a href="/about"> About</a></li>
             <div class="sound-icon">
             <li class="sound"><i class="fas fa-volume-up"></i></li>
         </div>
