--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -4,143 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KakaTete</title>
-    <link rel="stylesheet" href="/kakatete/frontend/frontend/static/css/index.css">
+    <title>Kaka Tete</title>
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo.jpg"/>
 </head>
-<body>
-  <div class="heading">
-    <span class="main">
-      KAKA-TETE ONLINE GAMING HUB
-        <br>
-      </span>
+<body style="background: rgb(5,5,20); color: rgb(220,200,200); font-family: 'comic sans ms';">
+    <div class="heading">
+        <span class="main">
+            KAKA-TETE ONLINE GAME HUB
+        </span>
     </div>
     <div class="subheading">
-      <span class="sub">
-        - khelo, majje uthao, aur niklo
-    </span>
-  </div>
-<div class="navigation">
-    <ul>
-      <li class="list active">
-          <b></b>
-          <b></b>
-          <a href="/" >
-            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>  
-          </a>
-      </li>
-      <li class="list">
-          <a href="#" >
-            <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
-            <span class="title" id="game-menu">Games  
-              <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">
-                  <span class="dropbtn">
-                    <ion-icon name="chevron-down-outline"></ion-icon>
-                  </span>
-                </button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="#">Chess</a>
-                  <a href="#">Ludo</a>
-                  <a href="#">Scribble</a>
-                  <a href="#">Tic-Tac-Toe</a>
-                </div>
-              </div>
-          </span>
-          </a>
-      </li>
-      <!-- <li class="list">
-          <b></b>
-          <b></b>
-          <a href="#" >
-            <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
-            <span class="title">Ludo</span>  
-          </a>
-      </li>
-      <li class="list">
-          <b></b>
-          <b></b>
-          <a href="#" >
-            <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
-            <span class="title">Chess</span>  
-          </a>
-      </li> -->
-      <li class="list">
-          <b></b>
-          <b></b>
-          <a href="#" >
-            <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-            <span class="title">Pehchan btao(Login)</span>  
-          </a>
-      </li>
-      <li class="list">
-          <b></b>
-          <b></b>
-          <a href="/about" >
-            <span class="icon"><ion-icon name="help-outline"></ion-icon></span>
-            <span class="title">Aur janega?(About)</span>  
-          </a>
-      </li>
-      <li class="list">
-          <b></b>
-          <b></b>
-          <a href="#" >
-            <span class="icon"><ion-icon name="share-social-outline"></ion-icon></span>
-            <span class="title">Failade Failade(Share)</span>  
-          </a>
-      </li>
-      <li class="list">
-          <b></b>
-          <b></b>
-          <a href="#" >
-            <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
-            <span class="title">Leave Server</span>  
-          </a>
-      </li>
-    </ul>
-</div>
-
-<!-- <div class="toggle">
-    <ion-icon name="menu-outline" class="open"></ion-icon>
-    <ion-icon name="close-outline" class="close"></ion-icon>
-</div> -->
-<div class="box">
-  <span class="gamebox {{game}}" id="gamebox" style="color: white;">
-    <noscript>
-      Seems like you have turned off your javascript, Please Turn it ON to play games.
-    </noscript>
-  </span>
-</div>
-<div class="chat">
-  <span class="chatting">msg here</span>
-</div>
-<div class="chatbox">
-  <label for="msg">Yaha Likho</label>
-  <input type="text" name="msg" id="name" placeholder="Yaha Likho Sirjee">
-</div>
-<div class="send">
-  <ion-icon name="send-outline"></ion-icon>
-
-</div>
-<div class="login">
-  <ion-icon name="person-outline"></ion-icon>
-</div>
-
-</div>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="/static/js/index.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript">
-
-function SetUpGameBoard(){
-  var gamebox = $("#gamebox");
-  game = document.getElementById("gamebox").classList[1];
-  gamebox.load("/play/"+game);
-}
-
-SetUpGameBoard();
-
-</script>
+        <span class="sub">
+            - khelo, majje uthao, aur niklo
+        </span>
+    </div>
+    <br><br>
+    <center>
+        <a href="/play" style="color: inherit; text-decoration: none;"><strong>Go to Play Dashboard</strong></a>
+        <br>
+        <h2 style="font-family: verdana;">
+            Select your game
+        </h2>
+    </center>
+    <div class="container">
+        <div class="chess">
+            <a href="/Chess">
+                <img src="/static/images/chess.jpeg" alt="Error loading image">
+            </a>
+        </div>
+        <div class="ludo">
+            <a href="/Ludo">
+                <img src="/static/images/ludo.jpeg" alt="Error loading image"> 
+            </a> 
+        </div>
+        <div class="scribble">
+            <a href="/Scribble">
+                <img src="/static/images/scribble.jpeg" alt="Error loading image">
+            </a>
+       
+        </div>
+        <div class="tic-tac-toe">
+            <a href="/Tic Tac Toe">
+                <img src="/static/images/tic-tac-toe.jpeg" alt="Error loading image">
+            </a>
+       
+        </div>
+    </div>
 </body>
 </html>
