--- a/frontend/frontend/canvas.html
+++ b/frontend/frontend/canvas.html
@@ -23,6 +23,16 @@
            <input type="range" min="1" max="100" class="pen-range" oninput="change_width = this.value">
        </div> 
     </div>
+    <div class="participants">
+        <span class="pheading">Participants</span>
+    </div>
+    <div class="heading">
+        <span>Scribble</span>
+    </div>
+    <div class="ans">
+        <span>Ans here</span>
+    </div>
+    <div class="header"></div>
     <script src="./static/js/canvas.js"></script>
 </body>
 </html>
