--- a/frontend/frontend/canvas.html
+++ b/frontend/frontend/canvas.html
@@ -24,15 +24,28 @@
        </div> 
     </div>
     <div class="participants">
-        <span class="pheading">Participants</span>
-    </div>
+    <div class="participant1"></div>
+    <div class="participant2"></div>
+    <div class="participant3"></div>
+    <div class="participant4"></div>
+    <div class="participant5"></div>
+    <div class="participant6"></div>
+    <div class="participant7"></div>
+   </div>
     <div class="heading">
-        <span>Scribble</span>
+        <center>
+            skribble
+        </center>
     </div>
     <div class="ans">
+        <div class="textbox">
+            <input type="text" name="Ans" placeholder="Write your ans here">
+        </div>
         <span>Ans here</span>
     </div>
-    <div class="header"></div>
+    <div class="header">
+        <span>PI__ K_I_A_D_A</span>
+    </div>
     <script src="./static/js/canvas.js"></script>
 </body>
 </html>
